aprendendo mexer com dev tools

--- a/ex021/caixa02.html
+++ b/ex021/caixa02.html
@@ -21,6 +21,7 @@
         nav {
             background-color: rgb(247, 164, 176);
             padding: 3px;
+            box-shadow: 2px 3px 2px 0px black;
         }
 
         nav > a {
@@ -37,7 +38,8 @@
         main {
             background-color: whitesmoke;
             padding: 10px;
-            margin: 10px;
+            margin: 10px;border-radius: 10px 0px;
+            box-shadow: 4px 4px 9px 0px rgba(0, 0, 0, 0.589);
         }
 
         article {
@@ -55,6 +57,18 @@
             text-align: center;
             padding: 1px;
             margin: 0px;
+        }
+
+        footer > p {
+            margin: 0px;
+        }
+
+        div#bola {
+            height: 100px;
+            width: 100px;
+            margin: 10px;
+            background-color: white;
+            border-radius: 50%;
         }
     </style>
 </head>
@@ -86,5 +100,6 @@
     <footer>
         <p>Desenvolvido pelo Cursoemvideo</p>
     </footer>
+    <div id="bola"></div>
 </body>
 </html>
